added horizontal bar chart

--- a/plan-review/index.html
+++ b/plan-review/index.html
@@ -85,6 +85,7 @@
             through
             <span id="endDateUI"></span>
         </p>
+		<p>FILTER PLANS BY FINAL STATUS GOES HERE</p>
     </div>
 	<label class="switch">
 		<input type="checkbox" onclick="chartVisibility()" checked="checked">
