working on zoom to muni and filter by muni

--- a/plan-review/index.html
+++ b/plan-review/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Plan Submissions Review Map</title>
+    <title>Plan Submissions Growth Trends</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
@@ -51,7 +51,7 @@
         <a class="navbar-brand" href="https://www.ccpa.net/" target="_blank" rel="noopener">
           <img height="35" width="35" class="img-fluid d-none d-sm-inline-block" src="//gis.ccpa.net/gis_images/CCPALogo_61x61px.gif" alt="cumberland county logo" />
         </a>
-        <h1 class="navbar-brand white">Plan Submissions Review Map</h1>
+        <h1 class="navbar-brand white">Plan Submissions Growth Trends</h1>
         <span class="white d-none d-md-inline"> Cumberland County, PA</span>
       </div>
       <!-- Desktop Search (in modal for mobile) -->
@@ -85,7 +85,10 @@
             through
             <span id="endDateUI"></span>
         </p>
-		<p>FILTER PLANS BY FINAL STATUS GOES HERE</p>
+		<label class="container checkbox">Filter Plans By Final Status
+			<input type="checkbox">
+			<span class="checkmark"></span>
+		</label>
     </div>
 	<label class="switch">
 		<input type="checkbox" onclick="chartVisibility()" checked="checked">
